// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listing Detail initializes Google Tag Manager for a rental listing 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        681 Florida - Casa Adelante
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="681 Florida - Casa Adelante"
        property="og:title"
      />
      <meta
        content="681 Florida St, San Francisco, CA 94110. Applications Closed May 31, 2024 at 12:00 AM"
        property="og:description"
      />
      <meta
        content="681 Florida St, San Francisco, CA 94110. Applications Closed May 31, 2024 at 12:00 AM"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span>
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="md:overflow-x-hidden"
        data-testid="main-content-test-id"
        id="main-content"
      >
        <div
          class="action-block error-boundary none action-block__block"
        >
          <div
            class="action-block__head"
          >
            <div
              class="action-block__header"
            >
              An error occurred. Check back later.
            </div>
          </div>
          <div
            class="action-block__actions"
          >
            <button
              class="button is-info"
              tabindex="0"
            >
              Back to homepage
            </button>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Detail renders a habitat listing 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        TEST: 36 Amber Drive
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="TEST: 36 Amber Drive"
        property="og:title"
      />
      <meta
        content="36 Amber Drive, San Francisco, CA 94131. Applications Closed Dec 2, 2022 at 1:00 AM"
        property="og:description"
      />
      <meta
        content="36 Amber Drive, San Francisco, CA 94131. Applications Closed Dec 2, 2022 at 1:00 AM"
        name="description"
      />
      <meta
        content="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span>
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="md:overflow-x-hidden"
        data-testid="main-content-test-id"
        id="main-content"
      >
        <div
          class="action-block error-boundary none action-block__block"
        >
          <div
            class="action-block__head"
          >
            <div
              class="action-block__header"
            >
              An error occurred. Check back later.
            </div>
          </div>
          <div
            class="action-block__actions"
          >
            <button
              class="button is-info"
              tabindex="0"
            >
              Back to homepage
            </button>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Detail renders a listing with sro units 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        TEST Automated Listing (do not modify)
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="TEST Automated Listing (do not modify)"
        property="og:title"
      />
      <meta
        content=". Applications Closed Jan 1, 2000 at 1:00 AM"
        property="og:description"
      />
      <meta
        content=". Applications Closed Jan 1, 2000 at 1:00 AM"
        name="description"
      />
      <meta
        content="https://sfmohcd.org/sites/default/files/Documents/MOH/Housing%20Listing%20Photos/test-apologies.png"
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span>
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="md:overflow-x-hidden"
        data-testid="main-content-test-id"
        id="main-content"
      >
        <div
          class="action-block error-boundary none action-block__block"
        >
          <div
            class="action-block__head"
          >
            <div
              class="action-block__header"
            >
              An error occurred. Check back later.
            </div>
          </div>
          <div
            class="action-block__actions"
          >
            <button
              class="button is-info"
              tabindex="0"
            >
              Back to homepage
            </button>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Detail renders an open rental listing 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        681 Florida - Casa Adelante
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="681 Florida - Casa Adelante"
        property="og:title"
      />
      <meta
        content="681 Florida St, San Francisco, CA 94110. Applications Closed May 31, 2024 at 12:00 AM"
        property="og:description"
      />
      <meta
        content="681 Florida St, San Francisco, CA 94110. Applications Closed May 31, 2024 at 12:00 AM"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span>
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="md:overflow-x-hidden"
        data-testid="main-content-test-id"
        id="main-content"
      >
        <div
          class="action-block error-boundary none action-block__block"
        >
          <div
            class="action-block__head"
          >
            <div
              class="action-block__header"
            >
              An error occurred. Check back later.
            </div>
          </div>
          <div
            class="action-block__actions"
          >
            <button
              class="button is-info"
              tabindex="0"
            >
              Back to homepage
            </button>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`initializes Google Tag Manager for a sales listing 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        TEST: 36 Amber Drive
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="TEST: 36 Amber Drive"
        property="og:title"
      />
      <meta
        content="36 Amber Drive, San Francisco, CA 94131. Applications Closed Dec 2, 2022 at 1:00 AM"
        property="og:description"
      />
      <meta
        content="36 Amber Drive, San Francisco, CA 94131. Applications Closed Dec 2, 2022 at 1:00 AM"
        name="description"
      />
      <meta
        content="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span>
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link pb-4 pt-1 flex items-end "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="md:overflow-x-hidden"
        data-testid="main-content-test-id"
        id="main-content"
      >
        <div
          class="action-block error-boundary none action-block__block"
        >
          <div
            class="action-block__head"
          >
            <div
              class="action-block__header"
            >
              An error occurred. Check back later.
            </div>
          </div>
          <div
            class="action-block__actions"
          >
            <button
              class="button is-info"
              tabindex="0"
            >
              Back to homepage
            </button>
          </div>
        </div>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;
